# PPstyle

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PPstyle  PPstyle.cmake  PPstyle.format  PPstyle.sh  README.md  format.sh
.github/workflows/: package.yml  release.yml
