cmake_minimum_required(VERSION 3.20)

project(PPstyle VERSION "1.0.7")

include(GNUInstallDirs)

install(FILES "PPstyle"
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ
    DESTINATION "${CMAKE_INSTALL_BINDIR}"
)
install(FILES "PPstyle.cmake" DESTINATION "${CMAKE_INSTALL_DATADIR}/cmake/")
install(FILES "PPstyle.format" DESTINATION "${CMAKE_INSTALL_SHAREDSTATEDIR}")

set(CPACK_GENERATOR "TGZ")
include(CPack)
